# deptry

./: .gitignore  .pre-commit-config.yaml  404.html  Cargo.toml  foo-2.md  foo-3.md  foo-4.md  foo.md  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: main.yml  release.yml  validate-codecov-config.yml  validate-renovate-config.yml
CHANGELOG/: index.html
contributing/: index.html
docs/: changelog.md  configuration.md  contributing.md  index.md  rules-violations.md  supported-dependency-managers.md  usage.md  uv-workspaces.md
docs/stylesheets/: extra.css
python/deptry/: cli.py  config.py  core.py
python/deptry/scanners/: __init__.py  base.py  project.py  single_project.py  uv_workspace.py
python/deptry/violations/: __init__.py  base.py  finder.py
python/deptry/violations/dep001_missing/: finder.py
python/deptry/violations/dep003_transitive/: finder.py
python/deptry/violations/dep006_missing_workspace/: finder.py  violation.py
python/deptry/violations/dep007_workspace_transitive/: finder.py  violation.py
python/deptry/violations/dep101_missing_workspace/: finder.py  violation.py
python/deptry/violations/dep102_workspace_transitive/: finder.py  violation.py
rules-violations/: index.html
scripts/: copy-changelog.sh
search/: search_index.json
src/: file_utils.rs  visitor.rs
src/imports/: py.rs
supported-dependency-managers/: index.html
tests/: utils.py
tests/fixtures/deprecated_options/: pyproject.toml
tests/fixtures/gitignore/: pyproject.toml
tests/fixtures/inline_ignores/: pyproject.toml
tests/fixtures/pdm/: pyproject.toml
tests/fixtures/pep_621/: pyproject.toml
tests/fixtures/pep_723/: pyproject.toml
tests/fixtures/pep_723/src/scripts/: foo.py
tests/fixtures/poetry_pep_621/: pyproject.toml
tests/fixtures/requirements_in/: requirements.txt
tests/fixtures/requirements_txt/: requirements-typing.txt  requirements.txt
tests/fixtures/setuptools_dynamic_dependencies/: requirements.txt
tests/fixtures/uv/: pyproject.toml
tests/fixtures/uv_workspace/: README.md  pyproject.toml
tests/fixtures/uv_workspace/uv_workspace/: __init__.py
tests/functional/: conftest.py  utils.py
tests/functional/cli/: test_cli_pep_723.py  test_cli_uv.py  test_cli_uv_workspace.py
tests/unit/: test_cli.py
tests/unit/scanners/: test_project_scanner.py  test_single_project_scanner.py  test_uv_workspace_scanner.py
tests/unit/violations/dep006_missing_workspace/: test_finder.py
tests/unit/violations/dep101_missing_workspace/: test_finder.py
tests/unit/violations/dep102_workspace_transitive/: test_finder.py
usage/: index.html
