[project]
name = "foo"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "click==8.4.2",
    "urllib3==2.7.0",
    "requests==2.34.2",
]

[project.optional-dependencies]
dev = [
    "black==26.5.1",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.deptry]
optional_dependencies_dev_groups = ["dev"]

[tool.deptry.per_rule_ignores]
DEP002 = ["requests"]
