[project]
name = "foo"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "arrow==1.4.0",
    "asyncio==3.4.3",
    "click==8.4.2",
    "isort==8.0.1",
    "pkginfo==1.12.1.2",
    "requests==2.34.2",
    "urllib3==2.7.0",
]

[project.optional-dependencies]
dev = [
    "black==26.5.1",
    "mypy==2.3.0",
]
test = ["pytest==9.1.1"]
plot = ["matplotlib==3.11.0"]

[dependency-groups]
foo = ["certifi==2026.6.17"]
bar = ["idna==3.18"]
all = [{include-group = "foo"}, "packaging==26.2"]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.deptry]
non_dev_dependency_groups = ["bar"]
optional_dependencies_dev_groups = ["dev"]

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
