[project]
name = "foo"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "arrow==1.4.0",
    "pkginfo==1.12.1.2",
    "urllib3==2.7.0",
]

[project.optional-dependencies]
foo = [
    "click==8.4.2",
    "isort==8.0.1",
]
bar = ["requests==2.34.2"]

[dependency-groups]
foo = ["certifi==2026.6.17"]
bar = ["idna==3.18"]
all = [{include-group = "foo"}, "packaging==26.2"]

[tool.uv]
dev-dependencies = [
    "black==26.5.1",
    "mypy==2.3.0",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
]

[tool.deptry]
non_dev_dependency_groups = ["bar"]
optional_dependencies_dev_groups = ["bar"]

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
