[project]
name = "uv-workspace"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["foo"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
foo = { workspace = true }

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
